1999-09-05  bertrand  <Bertrand.Guiheneuf@aful.org>

	* tests/ui-tests/store_listing.c (show_folder_messages): 
	use folder summary instead of opening all messages.

	* camel/providers/MH/camel-mh-folder.c (_create_summary): 
	basic and highly non-efficient summary implementation.
	Should be seen as a proof of concept only.
	subfolder summary still has to be implemented.
	
	* camel/providers/maildir/camel-maildir-folder.c (_init_with_store): 
	hasn't summary for the moment. 
	* camel/providers/maildir/camel-maildir-folder.c
	cosmetic changes.
	

1999-09-04  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/providers/MH/camel-mh-folder.c (_create_summary):
	started summary implementation.
	(_open): correct use of open.

	* camel/camel-folder.c (camel_folder_get_summary): 
	get folder associated summary object.

	* camel/Makefile.am:
	added summary files build

	* camel/camel-folder-summary.[ch]: 
	basic summary framework

1999-09-03  bertrand  <Bertrand.Guiheneuf@aful.org>

	* devel-docs/camel/Makefile.am:
	sgml doc has camel-recipient now.

	* camel/camel-recipient.c (camel_recipient_foreach_recipient_type): 
	added in-line documentation.

1999-09-02  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/providers/maildir: Added (experimental) maildir 
	provider written by Jukka Zitting <hukka@greywolves.org>
	
	* camel/providers/Makefile.am (SUBDIRS): build maildir
	provider.

	* camel/camel-provider.c (camel_provider_get_for_protocol):
	bug fix. patch from  Jukka Zitting <hukka@greywolves.org>

	* camel/camel-mime-message.c (_write_one_recipient_to_stream): 
	changed decl to fit CRLFunc. 
	(_write_recipients_to_stream): 
	calls camel_recipient_foreach_recipient_type now.

	* camel/camel-recipient.c (camel_recipient_foreach_recipient_type): 
	new convinience function. Iterate over all recipient types.

	* camel/gmime-utils.c (gmime_write_header_table_to_stream): 
	s/write_header_table_to_stream/gmime_write_header_table_to_stream/