@@ -2,6 +2,8 @@
 
 	* tests/ui-tests/store_listing.c (show_folder_messages): 
 	use folder summary instead of opening all messages.
+	(show_folder_messages): re-enabled old CPU/Mem consumming
+	method. Use ful for pop3 for instance.
 
 	* camel/providers/MH/camel-mh-folder.c (_create_summary): 
 	basic and highly non-efficient summary implementation.
